syntax = "proto3";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse) {}
  rpc SubscribeTodos (SubscribeTodoRequest) returns (stream CreateTodoResponse) {}
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  bool completed = 3;
  string author = 4;
}

message CreateTodoResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string author = 5;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated CreateTodoResponse todos = 1;
}

message SubscribeTodoRequest {}